--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,11 @@
 *.user
 *.userosscache
 *.sln.docstates
+.vscode/
 *.ignore.*
 **/*.ignore/
+
+**/Migrations/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
