--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,4 +2,8 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.4.13" />
+  </ItemGroup>
 </Project>
