--- a/src/Backend.Api/Backend.Api.csproj
+++ b/src/Backend.Api/Backend.Api.csproj
@@ -8,5 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Scalar.AspNetCore" />
+    <PackageReference Include="Serilog.AspNetCore" />
+    <PackageReference Include="Serilog.Sinks.Console"  />
   </ItemGroup>
 </Project>
