--- a/src/Backend.Api/Backend.Api.csproj
+++ b/src/Backend.Api/Backend.Api.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Scalar.AspNetCore" />
     <PackageReference Include="Serilog.AspNetCore" />
-    <PackageReference Include="Serilog.Sinks.Console"  />
+    <PackageReference Include="Serilog.Sinks.Console" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Modules\Auth\Mono.Modules.Auth.csproj" />
   </ItemGroup>
 </Project>
