--- a/src/Modules/Auth/Mono.Modules.Auth.csproj
+++ b/src/Modules/Auth/Mono.Modules.Auth.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\..\Shared\Common\Mono.Shared.Common.csproj" />
     <ProjectReference Include="..\..\Shared\Kernel\Mono.Shared.Kernel.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+  </ItemGroup>
 </Project>
