--- a/src/Modules/Auth/Mono.Modules.Auth.csproj
+++ b/src/Modules/Auth/Mono.Modules.Auth.csproj
@@ -12,5 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="System.ComponentModel.Annotations" />
+
   </ItemGroup>
 </Project>
