--- a/src/Backend.Api/appsettings.json
+++ b/src/Backend.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=monodev;user=root;password=root"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information"
