--- a/src/Modules/Auth/Mono.Modules.Auth.csproj
+++ b/src/Modules/Auth/Mono.Modules.Auth.csproj
@@ -10,9 +10,12 @@
     <ProjectReference Include="..\..\Shared\Kernel\Mono.Shared.Kernel.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
     <PackageReference Include="System.ComponentModel.Annotations" />
-
   </ItemGroup>
 </Project>
